force-app/main/default/objects/Financial_Detail__c/Financial_Detail__c.object-meta.xml
<CustomObject>
    <label>Financial Detail</label>
    <nameField>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>