force-app/main/default/objects/Financial_Detail__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <label>Branch Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>