force-app/main/default/objects/Financial_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Account_Number__c</columns>
    <columns>IBAN__c</columns>
    <columns>Swift_Code__c</columns>
    <columns>Branch_Name__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>